# VKR

./: README.md  dockerfile  main.py
Fashion_Bot/: .dockerignore  .gitignore  Dockerfile  README.md  bot.py  config.py  deploy.sh  docker-compose.yml  entrypoint.sh  handlers.py  init.sql  pyproject.toml  stop.sh  tasks.py  web_app.py
Fashion_Bot/app/: main.py
Fashion_Bot/app/api/: main.py
Fashion_Bot/app/api/routes/: auth.py  fashion.py  photos.py  users.py
Fashion_Bot/app/api/schemas/: auth.py  users.py
Fashion_Bot/app/bot/: keyboards.py  main.py  middlewares.py  states.py
Fashion_Bot/app/bot/handlers/: auth.py  base.py
Fashion_Bot/app/core/: config.py  deps.py  security.py
Fashion_Bot/app/db/: models.py  session.py
Fashion_Bot/app/ml/: __init__.py  fashion_attributes.py  recommendation_engine.py  vision_advisor.py
Fashion_Bot/app/services/: user_deletion.py
Fashion_Bot/app/worker/: celery_app.py  tasks.py
Fashion_Bot/k8s/: api.yaml  bot.yaml  configmap.yaml  db-init-configmap.yaml  migration-job.yaml  nginx.yaml  postgres.yaml  redis.yaml  secrets.yaml  worker.yaml
Fashion_Bot/migrations/: 001_initial.sql  002_add_user_profile_fields.sql  003_password_reset_telegram_message.sql
Fashion_Bot/ml_models/RandomForest/: config.joblib  season_mlb.joblib  style_mlb.joblib
Fashion_Bot/ml_models/ResNet/: metrics.json
Fashion_Bot/nginx/: Dockerfile  dashboard.html  from-telegram.html  index.html  link-existing-web.html  link-telegram.html  login-token.html  nginx.conf  outfits.html  photos.html  profile.html  recommendations.html  settings.html  view-photos.html
Fashion_Bot/nginx/assets/js/: app.js
Fashion_CV/: .gitignore  README.md  config.py  create_dataset.py  pyproject.toml
Fashion_CV/create_dataset/: README.md  config.py  create_dataset.py  pyproject.toml
Fashion_CV/ml_pipeline/: 2_dataset_preparation.ipynb  3_attribute_extraction.ipynb  4_fashion_ontology_recsys.ipynb  README.md
Fashion_CV/ml_pipeline/1_salient_object_detection/: .gitignore  README.md  pyproject.toml
Fashion_CV/ml_pipeline/1_salient_object_detection/src/fashion_cv/: 1_salient_object_detection_vkr.ipynb  cli.py
Fashion_CV/ml_pipeline/1_salient_object_detection/src/fashion_cv/preprocess/: __init__.py  remove_bg.py
Fashion_CV/ml_pipeline/3_attribute_extraction/: README.md  resnet18_training.ipynb  resnet18_training_vkr.ipynb
Fashion_CV/ml_pipeline/3_attribute_extraction/RandomForest/: train_ensample.ipynb
Fashion_CV/ml_pipeline/3_attribute_extraction/resnet/: train_resnet.ipynb
Fashion_CV/ml_pipeline/3_attribute_extraction/saved_models/RandoForest/: season.joblib
Fashion_CV/ml_pipeline/3_attribute_extraction/saved_models/RandomForest/: color_mlb.joblib  item_mlb.joblib
Fashion_CV/ml_pipeline/3_attribute_extraction/saved_models/ResNet/: color_mlb.json
Fashion_CV/ml_pipeline/3_attribute_extraction/saved_models/ResNet50V1/: item_mlb.json  metrics.json  season_mlb.json  style_mlb.json
Fashion_CV/ml_pipeline/4_fashion_ontology_recsys/: README.md  main.py  model_utils.py  neo4j_logic.py
