[project]
name = "fashion-bot"
version = "0.1.0"
description = "Telegram-бот для подбора образов"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13.1",
    "aiohttp>=3.13.3",
    "celery[redis]>=5.6.2",
    "email-validator>=2.3.0",
    "fastapi>=0.136.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.5.0",
    "uvicorn[standard]>=0.46.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
]
